--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -9,6 +9,7 @@
 		<a href="https://docs.{{ makedeb_url }}">Docs</a>
 		<p>MPR</p>
 		<a href="https://www.{{ makedeb_url }}/news">News</a>
+		<a href="https://www.{{ makedeb_url }}/donate">Donate</a>
 	</div>
 </header>
 <hr class="header-hr">
