--- a/templates/pkgbase/git.html
+++ b/templates/pkgbase/git.html
@@ -54,8 +54,8 @@
                     {% endfor %}
                 </div>
                 <div class="section">
-                    <p class="key">Clones:</p>
-                    <p class="value">{{ pkgbase.NumGitClones }}</p>
+                    <p class="key">Pulls:</p>
+                    <p class="value">{{ pkgbase.NumGitPulls }}</p>
                 </div>
             </div>
 
