More API changes
- All API keys are now stored hashed via sha256 in the database. This should help in the instance of a database leak.

- Made some HTML and CSS changes.

--- a/media/scss/homepage.scss
+++ b/media/scss/homepage.scss
@@ -2,6 +2,14 @@
 
 .intro {
 	text-align: center;
+	// We have a global setting to where the second to last item in 'body'
+	// has a 'padding-bottom' of 3em so that there's space between it and
+	// the footer. We don't want that here, as that's the
+	// 'Newest/Popular Packages' sections, and it looks weird with the
+	// white gap at the bottom.
+	//
+	// You can remove this if a new section gets added.
+	margin-bottom: 0 !important;
 	
 	.big-intro {
 		padding: 3em 10%;
