--- a/templates/pkgstats.html
+++ b/templates/pkgstats.html
@@ -1,6 +1,6 @@
 {% extends "partials/layout.html" %}
 {% block body %}
-    <div class="field pkgstats">
+    <div class="field pkgstats box box-no-color">
         <div class="item">
             <h2>{{ "My Flagged Packages" | tr }}</h2>
             <hr>
