--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -144,6 +144,10 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+
+	& > *:nth-last-child(2) {
+		margin-bottom: 3em;
+	}
 }
 
 footer {
