--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/static/css/style.css">
 
 	<!-- Resources -->
-	<link rel="shortcut icon" href="/static/images/makedeb-logo.png">
+	<link rel="shortcut icon" href="/static/images/makedeb-logo.svg">
 
 	<!-- Alternate resources -->
 	<link rel="alternate" type="application/rss+xml" title="Newest Packages RSS" href="/rss">
