--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <header>
 	<a class="makedeb-brand" href="/">
-		<img class="makedeb-logo" src="/static/images/makedeb-logo.png" alt="makedeb logo">
+		<img class="makedeb-logo" src="/static/images/makedeb-logo.svg" alt="makedeb logo">
 		<p class="makedeb-logo-text">makedeb</p>
 	</a>
 	
