--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -8,5 +8,6 @@
 		<a href="/mpr-archives">MPR Archives</a>
 		<a href="https://github.com/makedeb/mprweb">Report an Issue</a>
 		<a href="https://github.com/makedeb">GitHub</a>
+		<a href="https://{{ makedeb_url }}/privacy">Privacy</a>
 	</div>
 </footer>
