--- a/templates/account/search.html
+++ b/templates/account/search.html
@@ -5,9 +5,7 @@
 
     <div class="box">
         <h2>{{ "Accounts" | tr }}</h2>
-        {{ "Use this form to search existing accounts." | tr }}
-        <br />
-        <br />
+        <p>{{ "Use this form to search existing accounts." | tr }}</p>
         <form class="account-search-form" action="/accounts" method="get">
             <fieldset>
                 <div class="item">
