--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<div class="copyright">
-		<p>Copyright &copy; 2021-{{ now.strftime("%Y") }} makedeb Development Team.</p>
+		<p>&copy; {{ now.strftime("%Y") }} makedeb Development Team</p>
 	</div>
 	<div class="links">
 		<a href="/about">Instance Information</a>
