--- a/media/scss/comments.scss
+++ b/media/scss/comments.scss
@@ -3,9 +3,9 @@
 $comment-mobile-view: 35em;
 
 .comments {
-		hr:nth-child(2) {
-			display: none;
-		}
+	hr:nth-child(2) {
+		display: none;
+	}
 
 	.comment-header {
 		display: flex;
@@ -27,7 +27,7 @@ $comment-mobile-view: 35em;
 
 			@media (max-width: $comment-mobile-view) {
 				.edited {
-					padding-top: 0.5em;
+					margin-top: 0.5em;
 				}
 			}
 		}
@@ -38,7 +38,7 @@ $comment-mobile-view: 35em;
 
 			@media (max-width: $comment-mobile-view) {
 				margin-left: 0;
-				padding-bottom: 0.5em;
+				margin-bottom: 0.5em;
 			}
 			
 			.svg-icon {
@@ -60,16 +60,16 @@ $comment-mobile-view: 35em;
 			}
 
 			fieldset {
-				padding-top: 0;
+				margin-top: 0;
 			}
 		}
 	}
 
 	.article-content {
 		h5, h6 {
-			font-weight: bold;
-			padding-top: 0.5rem;
-			padding-bottom: 0.25rem;
+			font-weight: normal;
+			margin-top: 0.5rem;
+			margin-bottom: 0.25rem;
 		}
 
 		h5 {
@@ -95,10 +95,6 @@ $comment-mobile-view: 35em;
 		
 		fieldset {
 			background-color: lighten($light-grey, 5%);
-		}
-
-		p {
-			padding: 0.5em;
 		}
 
 		textarea {
