--- a/templates/mpr-archives.html
+++ b/templates/mpr-archives.html
@@ -14,29 +14,28 @@
             </div>
         </div>
         <h2>Available archives:</h2>
-        <br>
         <div class="item">
-            <code>/packages.gz</code>
+            <h4 class="code-header"><code>/packages.gz</code></h4>
             <hr>
             <p>A newline-separated list of package names on the MPR.</p>
         </div>
         <div class="item">
-            <code>/pkgbase.gz</code>
+            <h4 class="code-header"><code>/pkgbase.gz</code></h4>
             <hr>
             <p>A newline-separated list of package bases on the MPR.</p>
         </div>
         <div class="item">
-            <code>/users.gz</code>
+            <h4 class="code-header"><code>/users.gz</code></h4>
             <hr>
             <p>A newline-separated list of users on the MPR.</p>
         </div>
         <div class="item">
-            <code>/packages-meta-v1.json.gz</code>
+            <h4 class="code-header"><code>/packages-meta-v1.json.gz</code></h4>
             <hr>
             <p>A JSON-formatted archive of packages on the MPR. Notably, this archive does not include any form of dependencies for listed packages.</p>
         </div>
         <div class="item">
-            <code>/packages-meta-ext-v2.json.gz</code>
+            <h4 class="code-header"><code>/packages-meta-ext-v2.json.gz</code></h4>
             <hr>
             <p>A JSON-formated archive of packages on the MPR. In addition to the data included in <code>/packages-meta-v1.json</code>, these archives also include dependency listings.</p>
         </div>
