--- a/templates/partials/packages/search.html
+++ b/templates/partials/packages/search.html
@@ -1,7 +1,7 @@
 <div id="pkglist-search" class="box filter-criteria">
     <h2>{% trans %}Search Criteria{% endtrans %}</h2>
     <form action='/packages' method='get'>
-        <p><input type='hidden' name='O' value='0'/></p>
+        <input type='hidden' name='O' value='0'/>
 
         <fieldset>
             <legend class="comment">{{ "Enter search criteria" | tr }}</legend>
