Fix wordage on login page
Logging in via entering an email doesn't currently work - this is a bug that needs to be fixed, but for the time being we'll just say that you can only log in with a username.

See #103.

--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,7 @@
                         {% endif %}
 
                         <div class="item">
-                            <label for="id_username">{% trans %}User name or primary email address{% endtrans %}:</label>
+                            <label for="id_username">{% trans %}User name{% endtrans %}:</label>
                             <input id="id_username" type="text" name="user" size="30" maxlength="254" autofocus="autofocus" required="required" value="{{ user or '' }}">
                         </div>
 
